// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Warning > renders <MWarning>Warning slot</MWarning> correctly 1`] = `
"<div class="group border relative block rounded-base px-4 py-3 text-sm/6 my-5 dark:border-yellow-500/20 dark:bg-yellow-800/5 border-yellow-500/30 bg-yellow-500/10 text-yellow-600 transition-colors duration-200 ease-in-out">
  <!--v-if--><span class="iconify i-lucide:triangle-alert size-4 shrink-0 align-middle mr-1.5 text-yellow-600" aria-hidden="true"></span>
  <!--v-if-->Warning slot
</div>"
`;

exports[`Warning > renders basic case correctly 1`] = `
"<div class="group border relative block rounded-base px-4 py-3 text-sm/6 my-5 dark:border-yellow-500/20 dark:bg-yellow-800/5 border-yellow-500/30 bg-yellow-500/10 text-yellow-600 transition-colors duration-200 ease-in-out">
  <!--v-if--><span class="iconify i-lucide:triangle-alert size-4 shrink-0 align-middle mr-1.5 text-yellow-600" aria-hidden="true"></span>
  <!--v-if-->
</div>"
`;
